welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:26: error: not found: value decalage
  if ((j+decalage)%tailleY != 0){return 0}
         ^Array2:27: error: not found: value taille
  else {return taille}
               ^